P4ADEV-1570 arrange with new activities version